package com.example.trs;

import com.example.util.Param;

import java.util.ArrayList;

public class Airline extends User{

    public String name;

    public Flight createFlight(ArrayList<Param> params){
        return null;
    }

    public void editFlight(Flight flight, ArrayList<Param> params){
        
    }
    
    public void deleteFlight(Flight flight){

    }

    public void viewCustomers(Flight flight){

    }

    @Override
    public void register(String username, String password) {

    }

    @Override
    public void login(String username, String password) {

    }
}
