package com.example.trs;

import java.util.ArrayList;

public class Airplane {

    private ArrayList<Seat> seats;
    private String type;

    public ArrayList<Seat> getAvailableSeats(){
        return null;
    }
}
