package com.example.trs;

public enum Class {
    First,
    Business,
    Economy
}
