package com.example.trs;

import java.util.ArrayList;

public class Reservation {

    private Customer customer;
    private ArrayList<Ticket> tickets;

}
