@startuml
'https://plantuml.com/class-diagram

class User{
id
email
}

class Administrator{
}

class Airline{
name
}

class Customer{
firstName
lastName
}

Administrator "1" <|-- User
Customer <|-- User
Airline <|-- User

class Airport{
referenceCode
address
}

class Flight{
id
code
time
date
availableSeats
}

class Airplane{
type
}

class Seat{
seatNumber
}

class Ticket{
id
price
time
date
firstName
lastName
identificationType
identificationNumber
}

class Reservation{
id
}

enum ReservationType{
OneWay
Return
}

enum Class{
First
Business
Economy
}

Airline "1" o-- "*" Flight : create >
Reservation "1" --o "*" Flight
Reservation "1" --* "*" Ticket
Seat "1" *-- "1" Ticket
ReservationType "1" *-- "*" Reservation : type >
Flight "1" --* "1" Airplane : type >
Customer "1" o-- "*" Reservation: create >

Flight "*" --* "1" Airport : from >
Flight "*" --* "1" Airport : to >
Flight "*" --o "*" Airport : stops at >

Administrator -- Airport : create >

Customer "*" -- "*" Flight : previous >
Customer "*" -- "*" Flight : upcoming >

Seat "*" --* "1" Class : class >
Seat "*" --* "1" Airplane : has <

@enduml